--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>this is an update</h1>
+    <h1>this is an update 1</h1>
     <script src="app.js"></script>
 </body>
 </html>
